@@ -98,19 +98,12 @@ char*	comms_create_request(
 	return zbx_strdcat(request, "</req>");
 }
 
-int	comms_parse_response(char *xml,char *host,char *key, char *data, char *lastlogsize, char *timestamp,
-	       char *source, char *severity, int maxlen)
+int	comms_parse_response(char *xml, char *host, char *key, char *data, char *lastlogsize,
+		char *timestamp, char *source, char *severity)
 {
-	int ret = SUCCEED;
-	int i;
-
-	char host_b64[MAX_STRING_LEN];
-	char key_b64[MAX_STRING_LEN];
-	char data_b64[MAX_STRING_LEN];
-	char lastlogsize_b64[MAX_STRING_LEN];
-	char timestamp_b64[MAX_STRING_LEN];
-	char source_b64[ZBX_MAX_B64_LEN];
-	char severity_b64[MAX_STRING_LEN];
+	int	i, ret = SUCCEED;
+	char	data_b64[ZBX_MAX_B64_LEN];
+	size_t	sz;
 
 	assert(key);
 	assert(host);
@@ -120,37 +113,51 @@ int	comms_parse_response(char *xml,char *host,char *key, char *data, char *lastl
 	assert(source);
 	assert(severity);
 
-	memset(host_b64,0,sizeof(host_b64));
-	memset(key_b64,0,sizeof(key_b64));
-	memset(data_b64,0,sizeof(data_b64));
-	memset(lastlogsize_b64,0,sizeof(lastlogsize_b64));
-	memset(timestamp_b64,0,sizeof(timestamp_b64));
-	memset(source_b64,0,sizeof(source_b64));
-	memset(severity_b64,0,sizeof(severity_b64));
+	*host = *key = *data = *lastlogsize = *timestamp = *source = *severity = '\0';
+	
+	sz = sizeof(data_b64) - 1;
 
-	xml_get_data(xml, "host", host_b64, sizeof(host_b64)-1);
-	xml_get_data(xml, "key", key_b64, sizeof(key_b64)-1);
-	xml_get_data(xml, "data", data_b64, sizeof(data_b64)-1);
-	xml_get_data(xml, "lastlogsize", lastlogsize_b64, sizeof(lastlogsize_b64)-1);
-	xml_get_data(xml, "timestamp", timestamp_b64, sizeof(timestamp_b64)-1);
-	xml_get_data(xml, "source", source_b64, sizeof(source_b64)-1);
-	xml_get_data(xml, "severity", severity_b64, sizeof(severity_b64)-1);
+	if (SUCCEED == xml_get_data(xml, "host", data_b64, sz))
+	{
+		i = str_base64_decode(data_b64, host, MAX_STRING_LEN - 1);
+		host[i] = '\0';
+	}
 
-	memset(key,0,maxlen);
-	memset(host,0,maxlen);
-	memset(data,0,maxlen);
-	memset(lastlogsize,0,maxlen);
-	memset(timestamp,0,maxlen);
-	memset(source,0,maxlen);
-	memset(severity,0,maxlen);
+	if (SUCCEED == xml_get_data(xml, "key", data_b64, sz))
+	{
+		i = str_base64_decode(data_b64, key, MAX_STRING_LEN - 1);
+		key[i] = '\0';
+	}
 
-	str_base64_decode(host_b64, host, &i);
-	str_base64_decode(key_b64, key, &i);
-	str_base64_decode(data_b64, data, &i);
-	str_base64_decode(lastlogsize_b64, lastlogsize, &i);
-	str_base64_decode(timestamp_b64, timestamp, &i);
-	str_base64_decode(source_b64, source, &i);
-	str_base64_decode(severity_b64, severity, &i);
+	if (SUCCEED == xml_get_data(xml, "data", data_b64, sz))
+	{
+		i = str_base64_decode(data_b64, data, MAX_BUF_LEN - 1);
+		data[i] = '\0';
+	}
+
+	if (SUCCEED == xml_get_data(xml, "lastlogsize", data_b64, sz))
+	{
+		i = str_base64_decode(data_b64, lastlogsize, MAX_STRING_LEN - 1);
+		lastlogsize[i] = '\0';
+	}
+
+	if (SUCCEED == xml_get_data(xml, "timestamp", data_b64, sz))
+	{
+		i = str_base64_decode(data_b64, timestamp, MAX_STRING_LEN - 1);
+		timestamp[i] = '\0';
+	}
+
+	if (SUCCEED == xml_get_data(xml, "source", data_b64, sz))
+	{
+		i = str_base64_decode(data_b64, source, MAX_STRING_LEN - 1);
+		source[i] = '\0';
+	}
+
+	if (SUCCEED == xml_get_data(xml, "severity", data_b64, sz))
+	{
+		i = str_base64_decode(data_b64, severity, MAX_STRING_LEN - 1);
+		severity[i] = '\0';
+	}
 
 	return ret;
 }
